Add website redesign post

--- a/docs/_includes/index/customize.html
+++ b/docs/_includes/index/customize.html
@@ -1,6 +1,6 @@
 {% assign customize_link = site.data.links.by_id['overview-customize'] %}
 
-<section class="bd-easy section is-medium">
+<section id="customize" class="bd-easy section is-medium">
   <div class="container">
     <header class="bd-index-header">
       <h3 class="title is-3">
