--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -30,7 +30,7 @@ $carbon-poweredby-height: 20px
   margin-left: auto
   margin-right: auto
   max-width: $carbon-width
-  min-height: $carbon-height
+  min-height: $carbon-height + $carbon-poweredby-height
   min-width: 280px
 
 #carbon
@@ -55,11 +55,14 @@ $carbon-poweredby-height: 20px
     position: relative
     &:hover
       .carbon-img::after
-        +overlay
         background-color: rgba(#000, 0.05)
         content: ""
         display: block
+        height: $carbon-height
+        left: 0
+        position: absolute
         right: $carbon-spacing
+        top: 0
   .carbon-img
     bottom: 0
     float: left
