Clean up package.json

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -191,12 +191,12 @@
   outline: none;
 }
 
-[disabled].button, [disabled].input,
-[disabled].textarea, .select select[disabled], [disabled].file-cta,
-[disabled].file-name, [disabled].pagination-previous,
-[disabled].pagination-next,
-[disabled].pagination-link,
-[disabled].pagination-ellipsis {
+.button[disabled], .input[disabled],
+.textarea[disabled], .select select[disabled], .file-cta[disabled],
+.file-name[disabled], .pagination-previous[disabled],
+.pagination-next[disabled],
+.pagination-link[disabled],
+.pagination-ellipsis[disabled] {
   cursor: not-allowed;
 }
 
