--- a/css/bulma.css
+++ b/css/bulma.css
@@ -1,4 +1,4 @@
-/*! bulma.io v0.6.2 | MIT License | github.com/jgthms/bulma */
+/*! bulma.io v0.7.0 | MIT License | github.com/jgthms/bulma */
 @-webkit-keyframes spinAround {
   from {
     -webkit-transform: rotate(0deg);
@@ -5220,11 +5220,13 @@ a.tag:hover {
   margin-left: 0.5em;
 }
 
-.breadcrumb.is-centered ol {
+.breadcrumb.is-centered ol,
+.breadcrumb.is-centered ul {
   justify-content: center;
 }
 
-.breadcrumb.is-right ol {
+.breadcrumb.is-right ol,
+.breadcrumb.is-right ul {
   justify-content: flex-end;
 }
 
