Fix mobile navbar

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10682,13 +10682,24 @@ svg {
 }
 
 .intro-ghbtns {
-  height: 30px;
   margin-bottom: 26px;
+  min-height: 30px;
 }
 
 .intro-ghbtns iframe,
+.intro-ghbtns a,
 .intro-ghbtns img {
   height: 30px;
+}
+
+.intro-ghbtns a {
+  display: inline-block;
+  min-width: 100px;
+  vertical-align: top;
+}
+
+.intro-ghbtns img {
+  display: block;
 }
 
 .intro-npm {
