Added comma, and fieldset element reset

--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -32,6 +32,7 @@ html
 article,
 aside,
 figure,
+fieldset,
 footer,
 header,
 hgroup,
@@ -102,6 +103,9 @@ strong
   font-weight: $strong-weight
 
 // Block
+
+fieldset
+  border: none
 
 pre
   +overflow-touch
