--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -104,7 +104,7 @@ $button-static-border-color: $grey-lighter !default
     &.is-active
       background-color: darken($button-text-hover-background-color, 5%)
       color: $button-text-hover-color
-    &[disabled]
+    &[disabled],
     fieldset[disabled] &
       background-color: transparent
       border-color: transparent
@@ -132,7 +132,7 @@ $button-static-border-color: $grey-lighter !default
         background-color: darken($color, 5%)
         border-color: transparent
         color: $color-invert
-      &[disabled]
+      &[disabled],
       fieldset[disabled] &
         background-color: $color
         border-color: transparent
@@ -142,7 +142,7 @@ $button-static-border-color: $grey-lighter !default
         color: $color
         &:hover
           background-color: darken($color-invert, 5%)
-        &[disabled]
+        &[disabled],
         fieldset[disabled] &
           background-color: $color-invert
           border-color: transparent
@@ -163,7 +163,7 @@ $button-static-border-color: $grey-lighter !default
         &.is-loading
           &::after
             border-color: transparent transparent $color $color !important
-        &[disabled]
+        &[disabled],
         fieldset[disabled] &
           background-color: transparent
           border-color: $color
@@ -177,7 +177,7 @@ $button-static-border-color: $grey-lighter !default
         &:focus
           background-color: $color-invert
           color: $color
-        &[disabled]
+        &[disabled],
         fieldset[disabled] &
           background-color: transparent
           border-color: $color-invert
@@ -191,7 +191,7 @@ $button-static-border-color: $grey-lighter !default
   &.is-large
     +button-large
   // Modifiers
-  &[disabled]
+  &[disabled],
   fieldset[disabled] &
     background-color: $button-disabled-background-color
     border-color: $button-disabled-border-color
