--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -30,7 +30,7 @@ $control-padding-horizontal: calc(0.625em - #{$control-border-width}) !default
   &:active,
   &.is-active
     outline: none
-  &[disabled]
+  &[disabled],
   fieldset[disabled] &
     cursor: not-allowed
 
