--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -57,7 +57,7 @@ $help-size: $size-small !default
   &.is-active
     border-color: $input-focus-border-color
     box-shadow: $input-focus-box-shadow-size $input-focus-box-shadow-color
-  &[disabled]
+  &[disabled],
   fieldset[disabled] &
     background-color: $input-disabled-background-color
     border-color: $input-disabled-border-color
@@ -136,7 +136,7 @@ $help-size: $size-small !default
     cursor: pointer
   &:hover
     color: $input-hover-color
-  &[disabled]
+  &[disabled],
   fieldset[disabled] &
     color: $input-disabled-color
     cursor: not-allowed
@@ -170,7 +170,7 @@ $help-size: $size-small !default
     outline: none
     &::-ms-expand
       display: none
-    &[disabled]:hover
+    &[disabled]:hover,
     fieldset[disabled] &:hover
       border-color: $input-disabled-border-color
     &:not([multiple])
