Stop navbar-link displaying dropdown without a dropdown item
see https://github.com/jgthms/bulma/issues/1802

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -194,7 +194,7 @@ a.navbar-item,
   flex-grow: 1
   flex-shrink: 1
 
-.navbar-link
+.navbar-item.has-dropdown > .navbar-link
   padding-right: 2.5em
   &::after
     +arrow($navbar-dropdown-arrow)
