fix error message for required file fix #1137

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -354,12 +354,12 @@ $help-size: $size-small !default
       border-color: darken($file-name-border-color, 5%)
 
 .file-input
-  height: 0.01em
+  height: 100%
   left: 0
   outline: none
   position: absolute
   top: 0
-  width: 0.01em
+  width: 100%
 
 .file-cta,
 .file-name
