--- a/bulma.sass
+++ b/bulma.sass
@@ -5,5 +5,5 @@
 @import "sass/elements/_all"
 @import "sass/components/_all"
 @import "sass/flex/_all" /*! it was called grid */
-@import "sass/grid/iota" /* iota | MIT License | github.com/korywakefield/iota */
+@import "sass/grid/iota" /*! iota | MIT License | github.com/korywakefield/iota */
 @import "sass/layout/_all"
