--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5305,7 +5305,7 @@ a.tag:hover {
 }
 
 .card-header {
-  background-color: none;
+  background-color: transparent;
   align-items: stretch;
   box-shadow: 0 1px 2px rgba(10, 10, 10, 0.1);
   display: flex;
@@ -5338,12 +5338,12 @@ a.tag:hover {
 }
 
 .card-content {
-  background-color: none;
+  background-color: transparent;
   padding: 1.5rem;
 }
 
 .card-footer {
-  background-color: none;
+  background-color: transparent;
   border-top: 1px solid #dbdbdb;
   align-items: stretch;
   display: flex;
@@ -12874,6 +12874,27 @@ svg {
 .bd-klmn-columns:last-child .bd-notification {
   font-size: 0.75rem;
   white-space: nowrap;
+}
+
+.bd-side-sponsors {
+  margin-top: 1.5rem;
+}
+
+.bd-side-sponsor-label {
+  color: #b5b5b5;
+  font-size: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.bd-side-sponsor {
+  display: inline-block;
+  height: 50px;
+  vertical-align: top;
+}
+
+.bd-side-sponsor img {
+  display: block;
+  max-height: 100%;
 }
 
 .bd-banner {
