Add shoutout block

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -12730,6 +12730,28 @@ svg {
   }
 }
 
+.bd-shoutout {
+  background-color: whitesmoke;
+  padding: 2rem;
+  text-align: center;
+}
+
+.bd-shoutout:not(:last-child) {
+  margin-bottom: 3rem;
+}
+
+.bd-shoutout-text.title {
+  opacity: 0.8;
+}
+
+.bd-shoutout-text.subtitle {
+  opacity: 0.5;
+}
+
+.bd-shoutout-button {
+  margin-top: -0.75rem;
+}
+
 .bd-bootstrap-table {
   margin: 3rem 0;
 }
