Fix videos length

--- a/docs/_includes/elements/external-link.html
+++ b/docs/_includes/elements/external-link.html
@@ -1,5 +1,5 @@
 <a
-  class={{ include.classes }}
+  class="{{ include.classes }}"
   href="{{ include.url }}"
   target="_blank"
   rel="nofollow">
