Fix index backers

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -63,6 +63,7 @@
   border: none;
   border-radius: 290486px;
   cursor: pointer;
+  pointer-events: auto;
   display: inline-block;
   flex-grow: 0;
   flex-shrink: 0;
@@ -6922,11 +6923,11 @@ a.navbar-item:hover, a.navbar-item.is-active,
   }
   .navbar > .container .navbar-brand,
   .container > .navbar .navbar-brand {
-    margin-left: -1rem;
+    margin-left: -.75rem;
   }
   .navbar > .container .navbar-menu,
   .container > .navbar .navbar-menu {
-    margin-right: -1rem;
+    margin-right: -.75rem;
   }
   .navbar.is-fixed-bottom-desktop, .navbar.is-fixed-top-desktop {
     left: 0;
@@ -13073,7 +13074,7 @@ svg {
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1040px;
+    max-width: 1130px;
   }
   .bd-partner.bd-is-sponsor {
     flex-grow: 1;
