--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -14,6 +14,8 @@ $navbar-item-active-color: $black !default
 $navbar-item-active-background-color: transparent !default
 $navbar-item-img-max-height: 1.75rem !default
 
+$navbar-hamburger-color: $navbar-item-color !default
+
 $navbar-tab-hover-background-color: transparent !default
 $navbar-tab-hover-border-bottom-color: $link !default
 $navbar-tab-active-color: $link !default
@@ -139,6 +141,7 @@ body
   overflow-y: hidden
 
 .navbar-burger
+  color: $navbar-hamburger-color
   +hamburger($navbar-height)
   margin-left: auto
 
