--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -14,7 +14,7 @@ $navbar-item-active-color: $black !default
 $navbar-item-active-background-color: transparent !default
 $navbar-item-img-max-height: 1.75rem !default
 
-$navbar-hamburger-color: $navbar-item-color !default
+$navbar-burger-color: $navbar-item-color !default
 
 $navbar-tab-hover-background-color: transparent !default
 $navbar-tab-hover-border-bottom-color: $link !default
@@ -141,8 +141,8 @@ body
   overflow-y: hidden
 
 .navbar-burger
-  color: $navbar-hamburger-color
   +hamburger($navbar-height)
+  color: $navbar-burger-color
   margin-left: auto
 
 .navbar-menu
