--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4173,6 +4173,7 @@ a.box:active {
 }
 
 .control {
+  clear: both;
   font-size: 1rem;
   position: relative;
   text-align: left;
@@ -6582,6 +6583,7 @@ body.has-navbar-fixed-bottom {
   height: 3.25rem;
   position: relative;
   width: 3.25rem;
+  color: #4a4a4a;
   margin-left: auto;
 }
 
