--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -32,6 +32,7 @@ $modal-card-body-padding: 20px !default
   +overlay
   align-items: center
   display: none
+  flex-direction: column
   justify-content: center
   overflow: hidden
   position: fixed
