ie11 doesn't listen to size="" if it's given initial

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -172,7 +172,7 @@ $help-size: $size-small !default
     &:not([multiple])
       padding-right: 2.5em
     &[multiple]
-      height: initial
+      height: auto
       padding: 0
       option
         padding: 0.5em 1em
