Add is-arrowless class for navbar items
It removes the arrow in the items of the Navbar.

Closes https://github.com/jgthms/bulma/issues/1833

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -198,7 +198,7 @@ a.navbar-item,
   flex-grow: 1
   flex-shrink: 1
 
-.navbar-link
+.navbar-link:not(.is-arrowless)
   padding-right: 2.5em
   &::after
     +arrow($navbar-dropdown-arrow)
