Css change proposition

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -62,10 +62,10 @@ $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
       background-color: $color
       color: $color-invert
       .navbar-brand
-        & > .navbar-item,
+        & .navbar-item,
         .navbar-link
           color: $color-invert
-        & > a.navbar-item,
+        & a.navbar-item,
         .navbar-link
           &:hover,
           &.is-active
@@ -77,10 +77,10 @@ $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
       +desktop
         .navbar-start,
         .navbar-end
-          & > .navbar-item,
+          & .navbar-item,
           .navbar-link
             color: $color-invert
-          & > a.navbar-item,
+          & a.navbar-item,
           .navbar-link
             &:hover,
             &.is-active
