--- a/docs/_includes/elements/variables.html
+++ b/docs/_includes/elements/variables.html
@@ -15,7 +15,7 @@
 
     {% capture variables_link %}
       {% if data.file_path %}
-        <a href="https://github.com/jgthms/bulma/blob/master/sass/{{ data.file_path }}" target="_blank">
+        <a href="https://github.com/jgthms/bulma/blob/master/sass/{{ data.file_path }}" target="_blank" rel="nofollow">
           {{ variables_link_text }}
         </a>
       {% else %}
