Add variables blog post

--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -22,6 +22,6 @@ breadcrumb:
 </footer>
 {% endcapture %}
 
-{% include elements/snippet.html content=footer_example horizontal=true more=true fullwidth=true %}
+{% include elements/snippet.html content=footer_example horizontal=true more=true %}
 
 {% include elements/variables.html %}
