Fix book banner

--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -38,6 +38,7 @@
 
 .bd-footer-support
   @extend %bd-footer-box
+  border-top: 2px solid $background
   // background-color: $white-bis
   // box-shadow: none
   padding: 3rem
