--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -32,7 +32,7 @@
   user-select: none;
 }
 
-.select:not(.is-multiple):not(.is-loading)::after, .navbar-link::after {
+.select:not(.is-multiple):not(.is-loading)::after, .navbar-link:not(.is-arrowless)::after {
   border: 3px solid transparent;
   border-radius: 2px;
   border-right: 0;
@@ -5889,6 +5889,7 @@ a.dropdown-item.is-active {
 .modal {
   align-items: center;
   display: none;
+  flex-direction: column;
   justify-content: center;
   overflow: hidden;
   position: fixed;
@@ -6578,12 +6579,12 @@ body.has-navbar-fixed-bottom {
 }
 
 .navbar-burger {
+  color: #4a4a4a;
   cursor: pointer;
   display: block;
   height: 3.25rem;
   position: relative;
   width: 3.25rem;
-  color: #4a4a4a;
   margin-left: auto;
 }
 
@@ -6708,11 +6709,11 @@ a.navbar-item:hover, a.navbar-item.is-active,
   flex-shrink: 1;
 }
 
-.navbar-link {
+.navbar-link:not(.is-arrowless) {
   padding-right: 2.5em;
 }
 
-.navbar-link::after {
+.navbar-link:not(.is-arrowless)::after {
   border-color: #3273dc;
   margin-top: -0.375em;
   right: 1.125em;
@@ -11603,6 +11604,7 @@ svg {
 }
 
 .bd-footer-support {
+  border-top: 2px solid whitesmoke;
   padding: 3rem;
 }
 
@@ -13617,7 +13619,7 @@ svg {
 }
 
 .bd-book-banner {
-  background-color: #00d1b2;
+  background-color: #fafafa;
   position: relative;
 }
 
