Change color of loading bar on inverted button

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -145,9 +145,12 @@ $button-static-border-color: $grey-lighter !default
           border-color: transparent
           box-shadow: none
           color: $color
+        &.is-loading
+          &::after
+            border-color: transparent transparent $color $color
       &.is-loading
         &::after
-          border-color: transparent transparent $color-invert $color-invert !important
+          border-color: transparent transparent $color-invert $color-invert
       &.is-outlined
         background-color: transparent
         border-color: $color
