Added classes for are-medium and are-large classes for tags. Added are-small, are-medium, and are-large classes for buttons.

--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -16,6 +16,13 @@ $tag-delete-margin: 1px !default
     margin-bottom: -0.5rem
   &:not(:last-child)
     margin-bottom: 1rem
+  // Sizes
+  &.are-medium
+    .tag
+      font-size: $size-normal
+  &.are-large
+    .tag
+      font-size: $size-medium
   &.has-addons
     .tag
       margin-right: 0
@@ -37,6 +44,7 @@ $tag-delete-margin: 1px !default
         margin-left: 0.5rem
       &:not(:last-child)
         margin-right: 0
+
 
 .tag:not(body)
   align-items: center
