--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -225,6 +225,16 @@ $button-static-border-color: $grey-lighter !default
     margin-bottom: -0.5rem
   &:not(:last-child)
     margin-bottom: 1rem
+  // Sizes
+  &.are-small
+    .button
+      +button-small
+  &.are-medium
+    .button
+      +button-medium
+  &.are-large
+    .button
+      +button-large
   &.has-addons
     .button
       &:not(:first-child)
